BUG135 Add 3d model in products endpoint